# Rust_bootcamp

m00/ex00/: hello.rs
m00/ex01/: min.rs
m00/ex02/: collatz.rs  print_bytes.rs  yes.rs
m00/ex03/: fizzbuzz.rs
m00/ex04/: Cargo.toml
m00/ex04/src/: other.rs  overflow.rs
m00/ex05/: Cargo.toml
m00/ex05/src/: main.rs
m00/ex06/src/: main.rs
m00/ex07/: Cargo.toml
m00/ex07/src/: lib.rs
m01/ex00/: Cargo.toml
m01/ex00/src/: main.rs
m01/ex01/: Cargo.toml
m01/ex01/src/: main.rs
m01/ex02/src/: main.rs
m01/ex03/: Cargo.toml
m01/ex03/src/: main.rs
m01/ex04/src/: main.rs
m01/ex05/: Cargo.toml
m01/ex05/src/: main.rs
m01/ex06/: Cargo.toml
m01/ex06/src/: main.rs
